html/css/kylebatson.css
html, body {
	border: 0;
	margin: 0;
	padding: 0;
	font-size: 20px;
	line-height: 1rem;
}

body {
/* 	font-family: museo-sans, Helvetica, Arial, sans-serif; */
	font-family: "franklin-gothic-urw", Helvetica, Arial, sans-serif;
/* 	font-family: "freight-sans-pro", Helvetica, Arial, sans-serif; */
	font-size: .8rem;
	font-weight: 300;
	position: relative;
	
	/* Grid Layout */
	display: grid;
	grid-template-rows: repeat(3, minmax(3rem, auto));
	grid-template-columns: auto auto auto;
	grid-gap: 1rem;
}

body.hasOverlay {
	overflow: hidden;
}

body.baseline {
	background: #fff;
  background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 1px;
/*
  background: -webkit-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 1px;
  background: -moz-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 1px;
  background: -ms-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 1px;
  background: -o-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 1px;
*/
  background: linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 1px;
/*
  -webkit-background-size: 100% 15px;
  -moz-background-size: 100% 15px;
  -ms-background-size: 100% 15px;
  -o-background-size: 100% 15px;
*/
  background-size: 100% 1rem;
  
}

p {
/* 	line-height: 1rem; */
	margin: 1rem 0;
}

a {
	color: #d43a00;
	text-decoration: none;
	border-bottom: 2px solid transparent;
	box-sizing: border-box;
	cursor: pointer;
}

a:hover {
	border-color: #d43a00;
}

strong {
	font-weight: 700;
}

header {
	display: grid;
	grid-row: 1;
	grid-column: 2;
	grid-template-columns: repeat(6, 1fr);
	grid-column-gap: 1rem;
}

h1 {
	font-weight: 100;
	font-size: 1rem;
	text-transform: uppercase;
	grid-column: 1 / span 3;
	margin: 0;
	align-self: end;
}

p#contact {
	align-self: end;
	margin: 0;
	grid-column: 4 / span 2;
}

#nightToggle {
	grid-column: 6;
	border: none;
	background: transparent;
	color: inherit;
	font-family: inherit;
	font-size: inherit;
	padding: 0;
	margin: 0;
	align-self: end;
	text-align: left;
	width: 1rem;
	height: 1rem;
	vertical-align: baseline;
	line-height: 1rem;
	text-indent: -999em;
	background: url(../images/night.svg);
	filter: brightness(0);
}

#email {
	position: relative;
	margin-left: 1.3rem;
	display: inline-block;
}

#email:after, #resume:after {
	content: " ";
	display: block;
	height: 1rem;
	width: 1rem;
	position: absolute;
	top: 0;
	left: -1.3rem;
	filter: brightness(0);
}

#resume {
	position: relative;
	margin-left: 1.3rem;
	display: inline-block;
}

#resume:after {
	background: url(../images/downloadPDF.svg) center;
}

#email:after {
	background: url(../images/email.svg) center;
}

#email:hover:after, #resume:hover:after {
	filter: brightness(0.8) sepia(1) hue-rotate(-45deg) saturate(3.5);
}

header nav {
	grid-column: 4 / span 3;
	justify-self: stretch;
	align-self: end;
/* 	display: none; */
}

header nav ul {
	display: flex;
	justify-content: start;
	flex-wrap: wrap;
	list-style: none;
	margin: 0;
	padding: 0;
}

header nav ul li {
	text-align: right;
	margin-right: 1rem;
	white-space: nowrap;
	line-height: 1rem;
/* 	text-transform: uppercase; */
	font-size: .8rem;
	font-weight: 100;
}

header nav ul li:last-child {
	margin-right: 0;
}

@media (max-width: 600px) {
	header {
		grid-template-columns: auto 1rem;
		grid-template-rows: 3rem 1fr;
		grid-row-gap: .5rem;
	}
	
	header h1 {
		grid-column: 1;

	}
	
	header #contact {

		grid-column: 1;
	}
	
	header #nightToggle {
		grid-column: 2;
		grid-row: 1;

	}
}

main {
	grid-row: 2;
	grid-column: 2;
	
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: repeat(3, auto);
	grid-template-areas:
		"portfolio skills"
		"intro intro";
	grid-auto-flow: column;
	grid-gap: 1rem;
}

main#portfolioItem {
	display: block;
}

section {
	display: grid;
	grid-template-rows: 1rem 3rem auto;
	grid-gap: 1rem;
}

section h2 {
	font-family: "ltc-bodoni-175", "Times New Roman", serif;
	grid-row: 2;
	font-weight: 100;
	font-size: 2rem;
	line-height: 2rem;
	padding-top: .2rem; /* To align better on baseline */
	text-transform: uppercase;
	margin: 0;
	position: relative;
	border-top: 3px solid black;
}

h3 {
	margin-top: 0;
}

section p:first-child {

}

.sectionContent {
	grid-row: 3;
	grid-gap: 1rem;
	align-content: start;
}

/** Intro START **/
section#intro {
	grid-column: span 2;
}

section#intro .sectionContent {
	column-count: 2;
	column-gap: 1rem;
}

section#intro p {
/*
	display: flex;
	align-self:flex-end;
*/
}

section#intro p:nth-child(4) {
/* 	grid-column-start: 2; */
}

#profilePhoto {
	float: right;
	margin: 1rem;
	width: 50%;
	height: auto;
}

#profilePhoto:first-child {
	margin-top: 0;
}

.alignRight {
	margin-right: 0 !important;
}

.alignLeft {
	margin-left: 0;
}
/** Intro END **/

/** Portfolio START **/
section#portfolio {
	grid-area: portfolio;
	grid-template-rows: 1rem 3rem auto;
	grid-template-columns: 1fr 1fr;
	grid-gap: 1rem;
}

section#portfolio h2 {
	grid-row: 2;
	grid-column: 1 / span 2;
}

section#portfolio p {
	grid-row: 2;
	grid-column: 2;
}

section#portfolio .sectionContent {
	
	grid-row: 3;
	grid-column: 1 / span 2;
	
/*
	word-wrap: break-word;
	
	display: flex;
	justify-content: stretch;
	flex-wrap: wrap;
	margin: -.5rem;
	*/
}

section#portfolio .sectionContent ul {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
	grid-gap: 1rem;
	list-style: none;
	margin: 0;
	padding: 0;
}

.portfolioLink {
	display: block;
	flex: 1;
	justify-self: stretch;
	height: 100%;
	border: none;
/* 	border: 2px solid black; */
}

.portfolioLink img {
	max-width: 100%;
}

.portfolioItem-content {
	background: #ffffff;
	padding: 1rem;
	margin: 0 auto;
	box-sizing: border-box;
}

.portfolioItem-content h3 {
	font-family: "ltc-bodoni-175", "Times New Roman", serif;
	border-top: 2px solid black;
	padding-top: .2rem;
}

.portfolioItem-details {
	grid-area: content;
	display: block;
}

.portfolioExternalLink {
	display: block;
	margin-top: -1rem;
}

/** Portfolio END **/

/** Skills START **/
section#skills {
	grid-area: skills;
}
/* ... */

